--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-	<!-- HEADER -->
+	<!-- header -->
 	<div class="header clearfix">
 		<div class="container">
 			<div class="logo">
@@ -25,9 +24,8 @@
 			<p class="desc">Trent from punchy pint when lets get some snag. Get a dog up ya moolah piece of piss trent from punchy slaps. Shazza got us some chuck a sickie heaps he hasn't got a kindie. As stands out like bush telly with as stands out like porky. She'll be right pretty spiffy trent from punchy cab sav.</p>
 		</div>
 	</div>
-	<!-- //HEADER -->
 
-	<!-- CONTENT -->
+	<!-- content -->
 	<div class="container">
 		<div class="content clearfix">
 			<div class="content__left">
@@ -42,7 +40,7 @@
 		</div>
 	</div>
 
-	<!-- FOOTER -->
+	<!-- footer -->
 	<div class="footer">
 		<div class="container clearfix">
 			<div class="footer-contacts">
